k8s_manifests/edge/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: monitoring
    vaultpy.io/admission-webhooks: enabled
  name: monitoring
