k8s_manifests/edge/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vmagent
  name: vmagent
  namespace: monitoring
spec:
  clusterIP: None
  ports:
    - port: 8429
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: vmagent
